# budgy

./: .gitignore  CLAUDE.md  LAYOUT_TOOLCHAIN_PLAN.md  MANIFEST.in  README.md  RELEASE_NOTES.md  USER_GUIDE.md  layout_generator.py  ofxtool_fun.py  pyproject.toml  run-build.sh  run-install.sh  run-tests.sh  run_tests.sh  setup.cfg  simple_test.py  svg-brainstorm.md  test_enhanced_merge.py  test_primary_key_fix.py  tox.ini
.github/workflows/: README.md  build.yml  ci.yml  test.yml
docs/: BUDGY_UI_Design_Notes.md  Design_Notes.md  UI_Design_Notes.md
docs/ui-design/: README.md  function-panel.md  main-window.md  message-panel.md  top-panel.md
docs/ui-implementation/: README.md
layout_tools/: .gitignore  README.md  analyze_layout.py  design_layout.py  generate_code.py  generate_svg.py  layout_schema.py  message_test.json  message_test.py  test_analyzer.py  test_designer.py  test_roundtrip.py
layout_tools/examples/: designer_sample.json  sample_layout.json  sample_layout.py  simple_test.json
layout_tools/templates/: panel_template.py
src/: run_tests.sh  setup.cfg  simple_test.py  test.db  tox.ini
src-budgy/: setup.cfg
src-budgy/budgy/: __init__.py  importer.py
src-budgy/tests/: test_budgy.py  test_database.py  test_importer.py
src-budgy/tests/testdata/: checking.qfx  credit.qfx
src-gui/: setup.cfg  tox.ini
src-gui/budgy_gui/: __init__.py  configdata.py  data_panel.py  top_panel.py  viewer.py
src-gui/budgy_gui/data/themes/: theme.json
src-gui/budgy_gui/tests/: test_config.py  test_init.py
src/budgy/: __init__.py  database.py
src/budgy/core/: __init__.py  app.py  database.py  help.py  importer.py
src/budgy/core/tests/: test_app.py  test_budgy.py  test_database.py  test_importer.py
src/budgy/core/tests/testdata/: checking001.json
src/budgy/gui/: __init__.py  bg_color_panel.py  category_button.py  category_dialog.py  category_view_panel.py  configdata.py  constants.py  data_panel.py  db_record_view_panel.py  dialogs.py  events.py  function_panel.py  function_subpanel.py  import_data_dialog.py  message_panel.py  record_view_panel.py  report_panel.py  toggle_button.py  top_panel.py  viewer.py
src/budgy/gui/data/themes/: theme.json
src/budgy/gui/tests/: test_config.py  test_gui_app.py  test_init.py
src/budgy/version/: __init__.py
src/tests/: test_app.py
src/tests/testdata/: checking001.json
