[metadata]
name = budgy
version = file: VERSION.txt
# version = 2.0.0
description = Expense analysis tools
authors = Mark Dyer
author_email = heymarky@gmail.com
keywords =
    budget
    ofx

classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Shape Internal
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

license_files =
    ../LICENSE

[options]
install_requires =
    ofxtools
    importlib
    pygame_gui

include_package_data = False
python_requires = >= 3.11

packages=find:

test_suite = tests

tests_require =
  {tests_require}

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    budgy-import = core.importer:main

