[metadata]
name = budgy
version = file: VERSION.txt
# version = 2.0.0
description = Expense analysis tools
authors = Mark Dyer
author_email = heymarky@gmail.com
keywords =
    budget
    ofx

classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Shape Internal
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

license_files =
    ../LICENSE

[options]
install_requires =
    dateutils
    ofxtools
    importlib
    pygame_gui
    pygame_gui_extras @ git+https://github.com/PapaMarky/pygame_gui_extras.git

include_package_data = True
python_requires = >= 3.9

packages=find:

test_suite = tests

tests_require =
  {tests_require}

[options.packages.find]
where=src

[options.package_data]
budgy.gui =
    data/fonts/*
    data/themes/*.json


[options.entry_points]
console_scripts =
    budgy-import = budgy.core.importer:main
    budgy-viewer = budgy.gui.viewer:main
    budgy-help = budgy.core.help:show_user_guide

