[metadata]
name = budgy_gui
version = attr: budgy_gui.__version__
description = Expense analysis database visualization
authors = Mark Dyer
author_email = heymarky@gmail.com
keywords =
    budget
    ofx

classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Shape Internal
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

license_files =
    ../LICENSE

[options]
install_requires =
    pygame
    pygame_gui

include_package_data = False
python_requires = >= 3.11
package_dir=
    =.

packages=find:
test_suite = tests

tests_require =
  {tests_require}

[options.packages.find]
where=.

[options.entry_points]
console_scripts =
    budgy-viewer = budgy_gui.viewer:main
